css/side-bar.css
@import "colors.css";

html{
	height: 100%;
}

body{
	padding: 0px;
	margin: 0px;
	height: 100%;
}

.side-nav-bar{
	user-select: none;
	min-width: 250px;
	width: 50px;
	background-color: var(--background-color);
	padding: 0px 5px 0px 5px;
	border: 2px solid grey;
	border-left: none;
	border-bottom: none;
	border-top: none;
	transition: 0.8s;
}

.side-nav-bar-fixed{
	position: fixed; 
	z-index: 1;
	width: 250px;
}

.side-nav-bar .side-nav-logo{
	height: 20px;
	margin-left: 10px;
	padding-top: 30px;
	margin-bottom: 70px;
}

.logo-title{
	font-size: 2.2em;
    background: linear-gradient(90deg, var(--yellow-logo) 0%, var(--purple-logo) 100%); 
    -webkit-background-clip: text; 
    color: transparent;
    text-decoration: none;
    font-weight: bold;
    width: 100%;
    margin: 0px;
    font-family: 'Montserrat', sans-serif;
}

.side-nav-button{
	width: 98%;
	margin: 10px 0px 10px 2px;
}

.side-nav-button:hover{
	background-color: rgba(0, 0, 0, 0.05);
	border-radius: 0.5em;
}

.side-nav-button a{
	display: inline-flex;
	width: 100%;
	margin: auto 0;
	padding: 12px 0px 12px 0px;
	text-decoration: none;
	color: black;
}

.side-nav-button span{
	font-size: 16px;
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
	letter-spacing: 0.5px;
	font-weight: 400;
	text-align: left;
	padding-left: 15px;
	margin: 0;
}

.side-nav-button svg, .side-nav-profil{
	padding: 0px 5px 0px 10px;
}

.side-nav-profil{
	overflow-clip-margin: content-box;
	overflow: clip;
	padding: 0px;
	margin-left: 10px;
	margin-right: 5px;
	width: 24px;
	height: 24px;
	border-radius: 50%;
}

.side-nav-sub{
	width: 380px;
	height: 100%;
	background-color: white;
	position: relative;
	left: 50px;
	box-shadow: 10px 10px 14px 0px rgba(199,199,199,0.75);
	transition: 0.8s;
}

.icon-title{
	display: none;
}

@keyframes disappear {
	0%{ opacity: 1; }
	50%{ opacity: 0.5; }
	100%{ opacity: 0; }
}

@keyframes appear {
	0%{ opacity: 0; }
	50%{ opacity: 0.5; }
	100%{ opacity: 1; }
}

.side-nav-sub-research{
	display: none;
}

.side-nav-sub-notification{
	display: none;
}

